--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,8 @@
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
+        "predis/predis": "^1.1",
+        "shipping-docker/vessel": "^4.0",
         "beyondcode/laravel-dump-server": "^1.0",
         "barryvdh/laravel-debugbar": "^3.0",
         "barryvdh/laravel-ide-helper": "^2.4",
